#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(httpServer)
AM_INIT_AUTOMAKE(httpServer, 0.0.1)
#AC_INIT(http_main, 0.0.1, [fjxzchg@163.com])

AC_CONFIG_SRCDIR([http_main.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h semaphore.h pthread.h exception list])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_PID_T

# Checks for library functions.
dnl #
dnl # pthread stuff is usually in -lpthread
dnl # or in -lc_r, on *BSD
dnl #
dnl # On Some systems, we need extra pre-processor flags, to get them to
dnl # to do the threading properly.
dnl #
AC_CHECK_LIB(pthread, pthread_create,
        [
                AC_DEFINE(HAVE_LIBPTHREAD, 1, [Define to 1 if you have the 'pthread' library (-lpthread).])
                CFLAGS="$CFLAGS -D_REENTRANT -D_POSIX_PTHREAD_SEMANTICS"
                CPPFLAGS="$CPPFLAGS -D_REENTRANT -D_POSIX_PTHREAD_SEMANTICS"
            LIBS="$LIBS -lpthread" ],
                AC_CHECK_LIB(c_r, pthread_create,
                                [
                                        AC_DEFINE(HAVE_LIBPTHREAD, 1, [Define to 1 if you have the 'pthread' library (-lpthread).])
                                        CFLAGS="$CFLAGS -pthread -D_THREAD_SAFE"
                                        CPPFLAGS="$CPPFLAGS -pthread -D_THREAD_SAFE" ],
                                [ AC_MSG_ERROR(-lpthread not found, please install posix thread first) ]
                            )
                )

dnl #
dnl #  We need sem_init() and friends, as they're the friendliest
dnl #  semaphore functions for threading.
dnl #
dnl # HP/UX requires linking with librt, too, to get the sem_* symbols.
dnl # Some systems have them in -lsem
dnl # Solaris has them in -lposix4
AC_SEARCH_LIBS(sem_init, pthread sem posix4 rt semaphore,
    [],
    [AC_MSG_ERROR(-lsem not found, please install libsem first)]
)


AC_FUNC_FORK
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([bzero memset munmap socket strcasecmp strchr strncasecmp strpbrk strspn])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
